# mini-agent

./: Cargo.toml  cliff.toml  deny.toml
examples/: stream_chat.rs
src/: constant.rs  lib.rs  main.rs
src/llm/: complete.rs  mod.rs  semaphore.rs  stream.rs  structured.rs
src/models/: action_plan.rs  mod.rs
