[package]
name = "mini-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0", features = ["chat-completion"] }
async-stream = "0.3.6"
dotenvy = "0.15.7"
futures = "0.3.32"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
